--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
     </div>
     <hr />
     <h1 class="mb-4">List of requested videos</h1>
+    <div class="d-flex justify-content-between mb-4">
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-primary active" id="sort_by_new">
+          <input type="radio" name="option" value="newFirst"> New first
+        </label>
+        <label class="btn btn-primary" id="sort_by_top">
+          <input type="radio" name="option" value="topVotedFirst"> Top voted first
+        </label>
+      </div>
+    </div>
     <div id="listOfRequests">
 
     </div>
