--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
           <input type="radio" name="option" value="topVotedFirst"> Top voted first
         </label>
       </div>
+      <div>
+        <input type="search" class="form-control" id="search_box" placeholder="Type your search words">
+      </div>
     </div>
     <div id="listOfRequests">
 
