Task 10  "Add style filter" --[Final Task]

--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
               <input type="radio" name="option" value="topVotedFirst"> Top voted first
             </label>
           </div>
+          <div class="btn-group btn-group-toggle" data-toggle="buttons">
+            <label class="btn btn-primary active" id="filter_by_all">
+              <input type="radio" value="all" name="option" checked /> All
+            </label>
+            <label class="btn btn-primary" id="filter_by_new">
+              <input type="radio" value="new" name="option" /> New
+            </label>
+            <label class="btn btn-primary" id="filter_by_planned">
+              <input type="radio" value="planned" name="option" /> Planned
+            </label>
+            <label class="btn btn-primary" id="filter_by_done">
+              <input type="radio" value="done" name="option" /> Done
+            </label>
+          </div>
           <div>
             <input type="search" class="form-control" id="search_box" placeholder="Type your search words">
           </div>
