--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Semicolon | video request</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./Libarary_offline/all.min.css">
+  <link rel="stylesheet" href="./Libarary_offline/bootstrap.min.css">
 </head>
 
 <body>
@@ -114,6 +116,8 @@
     </div>
   </div>
 </body>
+<script src="./Libarary_offline/all.min.js"></script>
+<script src="./Libarary_offline/bootstrap.bundle.min.js"></script>
 <script type="module" src="./Js/client.js"></script>
 
 </html>
